--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,13 @@ body {
      margin-left: auto;
      margin-right: auto;
    }
+   .btn{
+    background-color:#48AAAD;
+    width: 100%;
+    height: 44px;
+    font-size: 18px;
+    font-weight: bold;
+   }
+   .btn:hover{
+     background-color: aqua;
+   }
